Added font-family GlegooBanner

--- a/Typography/style.css
+++ b/Typography/style.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: 'GlegooBanner';
+  src: url('../fonts/Glegoo-Regular.woff2') format('woff2'),
+    url('../fonts/Glegoo-Regular.woff') format('woff'),
+    url('../fonts/Glegoo-Regular.ttf') format('truetype');
+}
 /* Universal Styles */
 html {
   font-size: 16px;
@@ -74,6 +80,8 @@ a.home {
   font-weight: lighter;
   word-spacing: 0.25em;
   line-height: 1.4;
+  font-family: 'GlegooBanner';
+  font-size: 20px;
 }
 
 /* Editorial Sections */
@@ -115,6 +123,7 @@ a.home {
 }
 
 .space {
+  font-family: 'Space Mono', monospace;
 }
 
 .bold {
